force-app/main/default/objects/Models_Interested__c/Models_Interested__c.object-meta.xml
<CustomObject>
    <label>Models Interested</label>
    <nameField>
        <displayFormat>MI-{000000}</displayFormat>
        <label>Models Interested Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Models Interested</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>