force-app/main/default/objects/Models_Interested__c/fields/Chat__c.field-meta.xml
<CustomField>
    <fullName>Chat__c</fullName>
    <formula>IF(INCLUDES( Touch_Points__c, &apos;Chat&apos;),1,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>