force-app/main/default/objects/Models_Interested__c/fields/Custom_Quote__c.field-meta.xml
<CustomField>
    <fullName>Custom_Quote__c</fullName>
    <formula>IF(INCLUDES( Touch_Points__c, &apos;Custom Quote&apos;),1,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custom Quote</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>