force-app/main/default/objects/Models_Interested__c/fields/Facebook__c.field-meta.xml
<CustomField>
    <fullName>Facebook__c</fullName>
    <formula>IF(INCLUDES( Touch_Points__c, &apos;Facebook&apos;),1,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facebook</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>