force-app/main/default/objects/Models_Interested__c/fields/Instagram__c.field-meta.xml
<CustomField>
    <fullName>Instagram__c</fullName>
    <formula>IF(INCLUDES( Touch_Points__c, &apos;Instagram&apos;),1,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instagram</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>