force-app/main/default/objects/Models_Interested__c/fields/OpportunityCreationDate__c.field-meta.xml
<CustomField>
    <fullName>OpportunityCreationDate__c</fullName>
    <formula>DATEVALUE(Opportunity__r.CreatedDate)</formula>
    <label>Opportunity Creation Date</label>
    <type>Date</type>
</CustomField>