force-app/main/default/objects/Models_Interested__c/fields/Price_Alert__c.field-meta.xml
<CustomField>
    <fullName>Price_Alert__c</fullName>
    <formula>IF(INCLUDES( Touch_Points__c, &apos;Price Alert&apos;),1,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Alert</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>