force-app/main/default/objects/Models_Interested__c/fields/Principal_Leads__c.field-meta.xml
<CustomField>
    <fullName>Principal_Leads__c</fullName>
    <formula>IF(INCLUDES( Touch_Points__c, &apos;Principal Leads&apos;),1,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Principal Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>