force-app/main/default/objects/Models_Interested__c/fields/Quick_Contact__c.field-meta.xml
<CustomField>
    <fullName>Quick_Contact__c</fullName>
    <formula>IF(INCLUDES( Touch_Points__c, &apos;Quick Contact&apos;),1,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quick Contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>