force-app/main/default/objects/Models_Interested__c/fields/Stock_Reserved__c.field-meta.xml
<CustomField>
    <fullName>Stock_Reserved__c</fullName>
    <formula>IF(INCLUDES( Touch_Points__c, &apos;Stock Reserved&apos;),1,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stock Reserved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>