force-app/main/default/objects/Models_Interested__c/fields/Touch_Points__c.field-meta.xml
<CustomField>
    <fullName>Touch_Points__c</fullName>
    <label>Touch Points</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Price Alert</fullName>
            </value>
            <value>
                <fullName>Custom Quote</fullName>
            </value>
            <value>
                <fullName>Test Drive (Web)</fullName>
            </value>
            <value>
                <fullName>Test Drive (Walk-In)</fullName>
            </value>
            <value>
                <fullName>Stock Reserved</fullName>
            </value>
            <value>
                <fullName>Quick Contact</fullName>
            </value>
            <value>
                <fullName>Event Registration</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Registered Interest</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Offline Events</fullName>
            </value>
            <value>
                <fullName>Principal Leads</fullName>
            </value>
            <value>
                <fullName>Digital (Others)</fullName>
            </value>
            <value>
                <fullName>Ref-it-up</fullName>
            </value>
            <value>
                <fullName>Saleswhale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>