force-app/main/default/objects/Models_Interested__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <formula>IF(INCLUDES( Touch_Points__c, &apos;Warehouse&apos;),1,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warehouse</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>