force-app/main/default/objects/Models_Interested__c/listViews/All_Models_Interested.listView-meta.xml
<ListView>
    <fullName>All_Models_Interested</fullName>
    <columns>NAME</columns>
    <columns>Model__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Touch_Points__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Models Interested</label>
</ListView>